objects/Opportunity_Competitor__c.object
<CustomObject>
    <description>What it does?  Object holding information between opportunities and competitors.  Downstream Impact?  None.  Which Department is Owner?  Sales Ops.

Part of the DEMO REQUEST process.</description>
    <fields>
        <fullName>Competitor_Eliminated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it does?  Indicates whether competitor was eliminated from a deal.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <inlineHelpText>Has this competitor been eliminated from the deal?</inlineHelpText>
        <label>Competitor Eliminated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_Rank__c</fullName>
        <description>What it does?  Holds the rank of the competitor associated with an opportunity.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Competitor Rank</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>What it does?  Holds competitor for the opportunity associated with a DR.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Competition</label>
        <referenceTo>Competition__c</referenceTo>
        <relationshipLabel>Opportunity Competitors</relationshipLabel>
        <relationshipName>Opportunity_Competitor</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>What it does?  Holds a link to the opportunity associated with a competitor.  Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Competitors</relationshipLabel>
        <relationshipName>Opportunity_Competitor</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Won_this_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it does?  Shows whether competitor won the opportunity.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <inlineHelpText>Select this checkbox if the competitor won the opportunity and I3 lost</inlineHelpText>
        <label>Competitor Win</label>
        <type>Checkbox</type>
    </fields>
    <label>Opportunity Competitor</label>
    <nameField>
        <displayFormat>OC-{0}</displayFormat>
        <label>Opportunity Competitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>